use new --xposedversion parameter to check app_process compatibility